* functions added that mask bad values in channel-dependent manner from decoded VDIF streams if EDV4 is used.  Per-channel accounting of zero values is provided.
* Fix some data rate and frame rate calculations in mark5bfile.h
* New function: void snprintmark5bfilesummary(char *str, int maxLength, const struct mark5b_file_summary *sum)
* Change RPM name to vlbi-mark5access.*.rpm

Version 1.5.2
* Post DiFX-2.4
* Detect Legacy VDIF

Version 1.5.1
* Improve behavior of fixmark5b() in the case that fill pattern is seen at the 1 second transition.
* m5bsum calculates frame rates now rather than just assuming 25600 frames per second
* Improve blanking of mark5b in fix case (make use of the TVG bit to blank frame by frame)
* Added support for "d2k" mode, which is Mark5B with sign and magnitude bits swapped
* m5bstate: complex sampling is now supported
* examples/makeheader: tool to make a SIGPROC pulsar filterbank compatible header.
* m5bfb: Additions to polarisation support.
* Version for DiFX-2.4, Nov 4, 2014

Version 1.5.0
* Add KVN5B format: like Mark5B but different data bit patterns (Richard Dodson)
* Add 3, 5, 6, and 7 channel VDIF decoders
* Add functionality to repair Mark5B data streams (regrid frames, remove stray bytes, fill missing frames with fill pattern)
* Add Mark5B file summary program, m5bsum, akin to vsum (in vdifio)
* Reorder format checks to look for Mark5B earlier than Mark4 or VLBA as that format is becoming much more common
* Utility m5fb (mark5 filterbank) to generate dynamic spectrum from baseband data
* Version for DiFX-2.3, Dec 20, 2013

Version 1.4.4
* Slightly faster and more relaxed frame finding for VLBA and Mark4 formats
* Numerous small improvements based on improved cppcheck exposed by Martin
Ettl
* Add genheaders() for Mark4 and Mark5B formats
* m5test: minor improvements
* c++11 compliance
* Much improved capabilities for reading from stdin
* m5bstate: recognize filled data and don't count